fix getting active auctions (2)